--- a/docs/random-beacon/pricing.adoc
+++ b/docs/random-beacon/pricing.adoc
@@ -11,6 +11,11 @@ The pricing method avoids
 the known downfalls of previously considered, more complex, schemes,
 such as price discrimination being defeated by callback pooling.
 
+==== UML diagram
++-----------------+            
+|  estimate_fee   |            
++-----------------+       
+
 ==== Making requests
 How are requests made?
 
