--- a/docs/random-beacon/pricing.adoc
+++ b/docs/random-beacon/pricing.adoc
@@ -108,42 +108,24 @@ When a valid entry submission is received on-chain:
 ===== Callback processing
 How are callbacks processed?
 
-If the requester specified a callback,
-the callback is called using the callback gas amount as the maximum gas.
-
-If the callback gas amount turns to be not enough to execute the callback,
+A callback is called using the callback gas amount as the maximum gas. 
+If the callback gas amount is insufficient,
 callback execution is skipped and the rest of the relay entry submission code
 is processed as usual.
 
-After the callback is made
-the amount of gas spent on the call
-is multiplied with the lower of the
-_estimated gas price_ at the time of the request,
-or the actual gas price of the transaction,
-to get the _callback expenditure_.
+_callback expenditure_ is calculated as, gas spent on call * minimum(_estimated gas price_, _callback expenditure_). 
 
-The minimum of the gas price protects the beacon and requester against
-malicious miner-submitters.
+The minimum of the gas price is included to protect the beacon and requester against malicious miner-submitters.
 
-If the submitter is also a miner, they can place any arbitrary gas 
-price on the transaction. If the gas price used for calculating the callback 
-expenditure is higher than the quoted amount and the amount of gas used on the 
-call is close to the maximum specified by the requester, the requester refund 
-can go negative. If the negative requester refund is added to the 1% surplus 
-pool subsidy it can permit the miner-submitter to steal the subsidy.
+Malicious miner-submitters attacks: 
 
-On the other hand, if the amount of gas spent on the callback is less than the 
-provided maximum, a miner submitter can set the gas price to such an amount that 
-the requester is billed for the entire gas budget even if they really only spent 
-a small fraction of it. This means a miner submitter can steal the requester's 
-refund.
+- miner-submitters can steal the surplus pool subsidy by placing an arbitrary gas price on the transaction that is higher than quoted. This will cause the  the requester refund to go negative. If the negative requester refund is added to the 1% surplus pool subsidy it can permit the miner-submitter to steal the subsidy.
 
-If the callback execution uses more gas than specified in the request, it should 
-run out of gas. Thus the only scenario where the callback execution can cost more 
-than was quoted and paid for, is when the gas cost of the transaction exceeds the 
+- miner-submitters can steal the requesters refund by setting the gas price to the provided maximum. The requester is billed for the entire gas budget even if they really only spent a small fraction of it. 
+
+In the event the callback execution uses more gas than specified in the request, it will run out of gas. A callback execution can cost more than was quoted and paid for only when the gas cost of the transaction exceeds the 
 quoted estimate (which includes the safety margin mentioned in the gas price feed
-section). The submitter is intended to take the hit for submitting with a gas price 
-that exceeds the estimate.
+section). The submitter is intended to take the hit for submitting with a gas price that exceeds the estimate.
 
 ===== Requester refund
 How is a refund to the requester processes?
