--- a/docs/random-beacon/pricing.adoc
+++ b/docs/random-beacon/pricing.adoc
@@ -117,24 +117,28 @@ _callback expenditure_ is calculated as, gas spent on call * minimum(_estimated 
 
 The minimum of the gas price is included to protect the beacon and requester against malicious miner-submitters.
 
-Malicious miner-submitters attacks: 
+Malicious miner-submitter attacks: 
 
-- miner-submitters can steal the surplus pool subsidy by placing an arbitrary gas price on the transaction that is higher than quoted. This will cause the  the requester refund to go negative. If the negative requester refund is added to the 1% surplus pool subsidy it can permit the miner-submitter to steal the subsidy.
+- a miner-submitter can steal the surplus pool subsidy by placing an arbitrary gas price on the transaction that is higher than quoted. This will cause the  the requester refund to go negative. If the negative requester refund is added to the 1% surplus pool subsidy it can permit the miner-submitter to steal the subsidy.
 
-- miner-submitters can steal the requesters refund by setting the gas price to the provided maximum. The requester is billed for the entire gas budget even if they really only spent a small fraction of it. 
+- a miner-submitter can steal the requesters refund by setting the gas price to the provided maximum. The requester is billed for the entire gas budget even if they really only spent a small fraction of it. 
 
-In the event the callback execution uses more gas than specified in the request, it will run out of gas. A callback execution can cost more than was quoted and paid for only when the gas cost of the transaction exceeds the 
+A callback execution that uses more gas than specified in the request, it will run out of gas. A callback execution can cost more than was quoted and paid for only when the gas cost of the transaction exceeds the 
 quoted estimate (which includes the safety margin mentioned in the gas price feed
 section). The submitter is intended to take the hit for submitting with a gas price that exceeds the estimate.
 
 ===== Requester refund
-How is a refund to the requester processes?
-
+How is a refund to the requester processed?
 After the _callback expenditure_ has been determined,
 it is added to the _entry base price_ calculated with the _estimated gas price_
 to get the _actual entry price_.
+
+_actual entry price_ = _callback expenditure_ +  _entry base price_ (_estimated gas price_, _profit margin_, _DKG contribution_, _entry verification fee_)
+
 If no callback was specified in the request the _callback expenditure_ is 0
-and the _actual entry price = entry base price_.
+and:
+
+_actual entry price = entry base price_.
 
 The difference between the actual entry price and the _requester fee_
 is refunded to the requester,
