--- a/docs/random-beacon/pricing.adoc
+++ b/docs/random-beacon/pricing.adoc
@@ -136,36 +136,32 @@ _requester refund = actual entry price - requester fee + 1% of request subsidy p
 
 _actual entry price = callback expenditure +  entry base price_ 
 
-_entry base price = estimated gas price + profit margin + DKG contribution + entry verification fee_
+_entry base price = estimated gas price + profit margin + DKG contribution amortized over multiple entries + entry verification fee_
 
 ===== Paying rewards and operational fees
 How are payments made to the various actors in this process?
 
-The _entry base price_ consists of:
-the beacon's nominal _profit margin_ for the entry;
-a _DKG contribution_ to cover the cost of creating new signing groups,
-amortized over multiple entries per DKG;
-and the _entry verification fee_ for the gas costs of entry submission.
-
-The submitter and other group members are rewarded
-based on the _submission delay_;
-time from the _submission delay base time_
-to the submission of the valid entry.
-The rewards are specified in their own section.
+_Group & Submitter reward = F (submission delay, submission delay base time)_
 
 If the sum of rewards paid out
-is less than the _profit margin + entry verification fee_,
+is < _profit margin + entry verification fee_,
 the difference is added to the _request subsidy pool_.
+
+---
+This section appears to be a bunch of options?
 
 The _DKG contribution_ is added to the _DKG fee pool_,
 and the state of the pool is checked.
+
 If the amount in the DKG fee pool equals or exceeds the _DKG cost estimate_,
 group creation and a new DKG may be triggered.footnote:[Whether
 DKG is actually triggered is open.
+
 Always triggering DKG when the fee pool reaches a given level
 doesn't smooth out fluctuations in demand:
 a very large number of groups is created when demand is high,
 but those groups will expire on schedule if a slump occurs.
+
 A stochastic method for triggering DKG
 would permit smoothing out demand fluctuations:
 Take the current number of active groups,
@@ -179,6 +175,8 @@ every time sufficient funding is present;
 with higher demand the number of groups
 tends to be proportional to _(number of entries in expiration period)^2/3^_.
 ]
+
+---
 
 ==== Rewards
 
