--- a/docs/random-beacon/pricing.adoc
+++ b/docs/random-beacon/pricing.adoc
@@ -23,7 +23,7 @@ How are requests made?
 A request begins with the query 
 `entry_fee_estimate = estimate_fee(callback_gas_amount)`
 , which provides the customer with an estimated request fee. 
-The fee estimate is only valud for the transaction it is called in, so the customer must
+The fee estimate is only valid for the transaction it is called in, so the customer must
 make the request immediately after obtaining the estimate. Insufficient payment will lead to the request being rejected
 and the transaction reverted.
 
