--- a/docs/keep-client-quickstart.adoc
+++ b/docs/keep-client-quickstart.adoc
@@ -50,7 +50,7 @@ default address then leave `AnnouncedAddresses` set to `[]` or remove the entry 
 There are no guarantee that all messages sent by the node will reach all of the
 expected receivers. Unexpected network issues may cause messages to be dropped.
 In order to increase delivery rate, message retransmission can be enabled
-by setting `RetransmissionCycles` and `RetransmissionIntervalMilliseconds`
+by setting `RetransmissionCycles` and `RetransmissionInterval`
 in `[libp2p]` section. The first option determines the number of retransmission
 cycles which should be performed. The second option sets the milliseconds interval
 which should be preserved between cycles. Specific values should be chosen
