--- a/docs/keep-client-quickstart.adoc
+++ b/docs/keep-client-quickstart.adoc
@@ -47,7 +47,7 @@ default address then leave `AnnouncedAddresses` set to `[]` or remove the entry 
 
 === Message retransmission
 
-There are no guarantee that all messages sent by the node will reach all of the
+There is no guarantee that all messages sent by the node will reach all of the
 expected receivers. Unexpected network issues may cause messages to be dropped.
 In order to increase delivery rate, message retransmission can be enabled
 by setting `RetransmissionCycles` and `RetransmissionInterval`
@@ -55,7 +55,7 @@ in `[libp2p]` section. The first option determines the number of retransmission
 cycles which should be performed. The second option sets the milliseconds interval
 which should be preserved between cycles. Specific values should be chosen
 reasonably because high number of cycles and short interval value, may lead to
-increased resource usage.
+increased resource usage and network congestion.
 
 == Starting The Client
 
