--- a/docs/random-beacon/slashing.adoc
+++ b/docs/random-beacon/slashing.adoc
@@ -1,7 +1,3 @@
-:toc: macro
-
-= RFC 15: Slashing
-
 :icons: font
 :numbered:
 toc::[]
@@ -90,6 +86,8 @@ _Foo_ should slash a misbehaving virtual staker by 10,000 KEEP.
 
 ===== Staking contract: slashing
 
+TODO: Describe in prose?
+
 `slash(tokens sum, address[] misbehavers)`::
 
 Check that `msg.sender` is authorized
@@ -112,6 +110,7 @@ set `total = sum * length(misbehavers)` and `reward = total * 0.05 * pay`;
 burn `total - reward`; transfer `reward` to beneficiary of staker `tattletale`.
 
 ===== Staking contract: authorizations
+TODO: Describe in prose?
 
 `authorize(address op_contract)`::
 
