--- a/docs/random-beacon/slashing.adoc
+++ b/docs/random-beacon/slashing.adoc
@@ -247,6 +247,8 @@ The proof of failure is _objective_.
 
 When a group fails to produce an entry, all of its members will be subject to _seizing_ and the group itself will be terminated. The submitter of the trigger transaction will be treated as the _tattletale_, but the tattletale reward will be limited to `min(1, 20 / group_size)` of the maximum, or effectively the minimum stake of a single member. This is to prevent actors in a lynchpin position from profitably stealing other stakers' funds.
 
+
+--- TODO: Are the following needed in the YP at all?
 === Limitations
 
 Slashing is not limited to the amount originally staked for participating in the relevant operations; a malfunctioning operator contract could cause a staker to lose all stake. Chain reorganizations may lead to honest behavior in one branch being punishable misbehavior in another. Mitigations for this have not been included in this RFC.
@@ -271,6 +273,8 @@ after the first lookup to the staking contract.
 Lack of authorization cannot be cached,
 as the operator contract could later become authorized.
 
+---
+
 === Punishments
 
 ==== DKG
@@ -282,68 +286,37 @@ has interesting implications that could be explored further.
 
 ===== Disqualification in DKG
 
-Punishing disqualified DKG members on subjective proof
-creates opportunities to attack honest stakers
-but can also provide a way for compromised groups
-to profitably reveal and remove themselves
-if seizing on subjective proof is permitted.
-The implications and tradeoffs of
-concentrated vs. distributed risk are interesting.
-
-However, disqualification is defined by there being _objective_ off-chain proof,
-so the operator contract could be made to verify DKG transcripts
+However, disqualification is defined by there being _objective_ off-chain proof, so the operator contract is made to verify DKG transcripts
 to render DKG disqualification _objective_ on-chain as well.
 
-Disqualified members must be removed from the group.
-If disqualification is objectively proven,
-the operator must be punished with _seizing_ their stake.
-The submitter of the transaction containing the DKG transcript
-shall be the _tattletale_.
+Disqualified members must be removed from the group. If disqualification is objectively proven, the operator will be punished with _seizing_ their stake. The submitter of the transaction containing the DKG transcript will be the _tattletale_.
 
 ==== Signing
 
 ===== Invalid signature share
 
-Invalid signature shares can only be detected on-chain
-if a tattletale submits a proof
-that includes the signature share and the information required to verify it.
-If the DKG result includes a merkle root
-of each member's individual public key,
+Invalid signature shares can only be detected on-chain if a tattletale submits a proof that includes the signature share and the information required to verify it. 
+
+TODO: Does the implemented version of this include a merkle root?
+If the DKG result includes a merkle root of each member's individual public key,
 this proof can be relatively compact and inexpensive to verify.
 
 Proof of an invalid signature share is _objective_.
 
-If the broadcast of an invalid signature share is proven
-the responsible operator shall be punished by _seizing_,
-with the submitter of the proof receiving the tattletale reward.
+If the broadcast of an invalid signature share is proven the responsible operator shall be punished by _seizing_, with the submitter of the proof receiving the tattletale reward.
 
 ===== Unauthorized use of individual private key
 
-Unauthorized use of a member's individual private key
-can be proven on-chain by the submission of a suitable proof.
-The proof must contain the DKG merkle root,
-a merkle path to the individual public key,
-some value that isn't a requested entry,
-and a valid signature of that value with the individual public key.
+Unauthorized use of a member's individual private key can be proven on-chain by the submission of a suitable proof. The proof must contain the DKG merkle root, a merkle path to the individual public key, some value that isn't a requested entry, and a valid signature of that value with the individual public key.
 
 Such proof is _objective_.
 
-Unauthorized use of an individual private key
-shall be punished by _seizing_,
-with the submitter of the proof as the _tattletale_.
+Unauthorized use of an individual private key will be punished by _seizing_, with the submitter of the proof as the _tattletale_.
 
 === Chain reorganizations
 
-When chain reorganizations happen,
-a honest entry generation in one branch
-can be indistinguishable from frontrunning in the other.
-It is easy to punish the generation of unauthorized threshold signatures
-on values that aren't a part of the entry chain,
-and this can serve as a way to incentivize actors
-that have compromised the group private key of some group
-to destroy the group for immediate profit
-instead of covertly frontrunning the beacon.
-However, actual frontrunning is more difficult to deal with.
+TODO: This doesn't describe how the protocol handles this phenomenon?
+When chain reorganizations happen,a honest entry generation in one branch can be indistinguishable from frontrunning in the other. It is easy to punish the generation of unauthorized threshold signatures on values that aren't a part of the entry chain, and this can serve as a way to incentivize actors that have compromised the group private key of some group to destroy the group for immediate profit instead of covertly frontrunning the beacon. However, actual frontrunning is more difficult to deal with.
 
 [bibliography]
 == Related Links
